tests/error/ptr_static_outside2.gw
// [contains] can't declare func pointer static outside of a class
static typedef void (Test)(int i);
